--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,19 +14,20 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    # Set up Node.js (adjust to your React app's Node version)
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '18'  # Replace with the Node version you want to use
+    # Set up Docker for multi-stage build
+    - name: Set up Docker
+      run: |
+        docker build -t react-app .
 
-    # Install dependencies
-    - name: Install Dependencies
-      run: npm install
+    # Build the React application using the Docker container
+    - name: Build React App using Docker
+      run: |
+        docker build -t react-app .
 
-    # Build the React app
+    # Build the React app and store in build folder
     - name: Build React App
-      run: npm run build
+      run: |
+        docker run --rm -v $(pwd)/build:/app/build react-app
 
     # Deploy to S3
     - name: Deploy to S3
@@ -40,4 +41,3 @@ jobs:
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
